change toml file to use tensorflow-macos in mac m1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = ["Flavia Giammarino"]
 python = ">=3.9,<3.11"
 pandas = ">=1.5.2"
 numpy = ">=1.23.5"
-tensorflow = ">=2.10.0"
+tensorflow-macos = { version = "^2.10.0", markers = "platform_machine == 'arm64'" }
+tensorflow = { version = "^2.10.0", markers = "platform_machine != 'arm64'" }
 plotly = ">=5.11.0"
 kaleido = ">=0.2.1"
 
